--- a/style.css
+++ b/style.css
@@ -2,3 +2,157 @@
     margin: 0px;
     padding: 0px;
 }
+.nav-container{
+    padding: 30px;
+    background-color: rgb(155, 152, 152);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.menus ul{
+    font-size: 18px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    color: white;
+    list-style-type: none;
+    display: flex;
+    justify-content: space-around;
+    gap: 20px;
+}
+.menus li:hover{
+    color: blue;
+}
+.banner-container{
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+    background-image: url('./asset/image/background.jpg'),
+    linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.5));
+    background-blend-mode: overlay;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: white;
+}
+.btn-container{
+    display: flex;
+    gap: 10px;
+    
+}
+.banner-title{
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 800;
+    font-size: 56px;
+    margin-bottom: 24px;
+}
+.banner-desc{
+    font-size: 18px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    text-align: center;
+    margin-bottom: 14px;
+}
+.btn-primary{
+    padding: 14px 24px;
+    font-size: 18px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    border: 0px;
+    border-radius: 5px;
+}
+.digital{
+    color: red;
+}
+.btn-one{
+    background-color: red;
+    color: white;
+}
+.btn-two{
+    background-color: white;
+}
+
+.icon{
+    width: 130px;
+}
+.service-container{
+    display: flex;
+    justify-content: space-between;
+    height: 100vh;
+    align-items: center;
+    background-image: url('./asset/image/footer-bg.png'),
+    linear-gradient(rgba(0,0,0,0.9), rgba(0,0,0,0.9));
+    background-blend-mode: overlay;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: white;
+    padding: 40px;
+}
+.column-one-desc{
+    width: 540px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+.column-one-title{
+    font-size: 45px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 600;
+    margin-top: 10px;
+    margin-bottom: 10px;
+
+}
+.order-list{
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+.box-ca-one{
+    background-color: white;
+    width: 250px;
+    padding: 50px;
+    text-align: center;
+}
+.icon-title{
+    color: black;
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 600;
+    margin-top: 25px;
+    border-radius: 5px;
+}
+.box-one{
+    display: flex;
+    gap: 20px;
+}
+.box-two{
+    display: flex;
+    gap: 20px;
+    margin-top: 20px;
+}
+.author-img{
+    width: 70px;
+    height: 70px;
+    border-radius: 35px;
+    margin-top: 10px;
+}
+.author-title{
+    margin-bottom: 5px;
+}
+.profile{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    border-right: 5px solid red;
+    padding: 10px;
+}
+.profile-container{
+    display: flex;
+    align-items: center;
+    gap: 70px;
+}
